# ADR

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  Doxyfile  ENVIRONMENT.md  README.md  makefile  package-lock.json  remarks_1.m  run.bat  show_phi_eta.m  start_demo1_webui.bat  start_demo2_webui.bat  start_demo3_webui.bat  start_demo4_webui.bat  start_webui.bat  stop_demo1_webui.bat  stop_demo2_webui.bat  stop_demo3_webui.bat  stop_demo4_webui.bat  stop_webui.bat  time_eta_F_data.m  tongji_extracted_099_results.txt  tongjit099.m
analysis/: Plot_evolution.m  README.md  generate_opt.m  plot_centerline_cx_v1.m  plot_centerline_cx_v2.m  plot_composite_v10.m  plot_composite_v9.m  remarks_2.m  show_phi_eta.m
demo1/: .clang-format  CMakeLists.txt  README.md
demo1/include/: README.md  backend.h  checkpoint.h  config.h  file_utils.h  solver.h  types.h  util.h
demo1/input/: README.md  input_parameter_0001.toml  input_parameter_0002.txt  input_parameter_0003.txt  input_parameter_0004.toml
demo1/src/: README.md  backend.cpp  main_cuda.cpp  runtime.cpp  solver.cpp
demo1/tests/: README.md  solver_cpu_test.cpp
demo1/webui/: README.md  server.py
demo1/webui/static/: README.md  app.js  index.html  styles.css
demo2/: README.md
demo2/include/: README.md  config.h  io.h  params.h  solver.h  types.h
demo2/input/: README.md  input_parameter_0001.txt  input_parameter_0005.toml
demo2/src/: README.md  cuda_backend.cu  io.cpp  main.cpp  runtime.cpp  solver.cpp  util.cpp
demo2/tests/: README.md
demo2/webui/: README.md  server.py
demo3/: README.md  generate_demo3_cases.ps1  makefile
demo3/include/: README.md  config.h  runtime.h  types.h
demo3/input/: README.md  input_parameter_0001.toml  input_parameter_0002.toml  input_parameter_0003.toml  input_parameter_0004.toml  input_parameter_0005.toml  input_parameter_0006.toml  input_parameter_0010.toml  input_parameter_0011.toml  input_parameter_0013.toml  input_parameter_0016.toml  input_parameter_0023.toml  input_parameter_0027.toml  input_parameter_0030.toml  input_parameter_0032.toml  input_parameter_0034.toml  input_parameter_0035.toml  input_parameter_0037.toml  input_parameter_0039.toml  input_parameter_0041.toml  input_parameter_0042.toml  input_parameter_0043.toml  input_parameter_0045.toml  input_parameter_0046.toml  input_parameter_0052.toml  input_parameter_0053.toml  input_parameter_0054.toml  input_parameter_0063.toml  input_parameter_0065.toml  input_parameter_0067.toml  input_parameter_0070.toml  input_parameter_0071.toml  input_parameter_0074.toml  input_parameter_0075.toml  input_parameter_0076.toml  input_parameter_0077.toml  input_parameter_0078.toml  input_parameter_0079.toml  input_parameter_0080.toml  input_parameter_0081.toml  (+1835 more)
demo3/src/: README.md  cpu_backend.cpp  cuda_backend.cu  io.cpp  runtime.cpp  solver.cpp  优化方向.txt
demo3/tests/: README.md
demo3/webui/: README.md  server.py
demo4/: .gitignore  README.md
demo4/cases/: README.md
demo4/docs/: README.md  technical_route_analysis.md
demo4/input/: README.md  input_parameter_0001.toml  input_parameter_0003.toml  input_parameter_0004.toml  input_parameter_0007.toml  input_parameter_0008.toml  input_parameter_0009.toml  input_parameter_0012.toml  input_parameter_0014.toml  input_parameter_0015.toml  input_parameter_0017.toml  input_parameter_0018.toml  input_parameter_0019.toml  input_parameter_0020.toml  input_parameter_0021.toml  input_parameter_0022.toml  input_parameter_0024.toml  input_parameter_0025.toml  (+1855 more)
docs/: README.md  codex_project_guidelines.md  numerical_accuracy_analysis.md  robustness_recommendations.md
include/: README.md  backend.h  config.h  diffuse.h  io.h  runtime.h  solver.h  types.h
input/: README.md  input_parameter_0001.toml  input_parameter_0002.toml  input_parameter_0002.txt  input_parameter_0003.toml  input_parameter_0004.toml  input_parameter_0004.txt  input_parameter_0005.toml  input_parameter_0006.toml  input_parameter_reference.toml
paper/: .gitignore  JFM-FLM_Au.cls  Manuscript.tex  OVERLEAF_IMPORT.md  README.md  Ref.bib  Template.tex  WRITING_ENVIRONMENT_ARCHIVE.md
plan/: 20260513.md  demo4_development_plan.md  demo5_development_plan.md
src/: README.md  backend.cpp  checkpoint.cpp  cpu_backend.cpp  cuda_backend.cu  diffuse_old.cpp  io.cpp  main.cpp  main_cuda.cpp  runtime.cpp  solver.cpp
tests/: README.md  solver_cpu_test.cpp
tools/: README.md  check_encoding.ps1
webui/: README.md  server.py
(+26 files in other folders)
